--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dope",
     "description": "A Ghost theme",
-    "version": "1.0.0",
+    "version": "1.1.0-custom",
     "engines": {
         "ghost": ">=4.0.0",
         "ghost-api": "v4"
